samples/_failures_safe/1761078277_f78d96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1558f565.c: In function ‘main’:
./samples/SAFE/__tmp_1558f565.c:166:12: error: missing terminating " character
  166 |     printf("Commands: 0=START, 1=DATA_READY, 2=PROCESS_COMPLETE, 3=WRITE_COMP
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1558f565.c:166:5: error: expected expression at end of input
  166 |     printf("Commands: 0=START, 1=DATA_READY, 2=PROCESS_COMPLETE, 3=WRITE_COMP
      |     ^~~~~~
./samples/SAFE/__tmp_1558f565.c:166:5: error: expected declaration or statement at end of input
